--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 <div id="app"></div>
+<p style="text-align: center; padding: 20px; font-weight: bold; color: #333;">Hello, I'm Amy.</p>
 <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
